--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.2",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.2",
     "stripe": "^11.5.0"
   },
   "devDependencies": {
